--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,18 @@
 			}
 		],
 		"paths": {
+			"@root/*": ["./*"],
 			"@/*": ["./src/*"],
 			"@shadcnui/*": ["./src/common/components/shadcnui/*"],
 			"@public/*": ["./public/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"next-auth.d.ts"
+	],
 	"exclude": ["node_modules"]
 }
