--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "lucide-react": "^0.486.0",
     "next": "15.2.4",
     "next-auth": "5.0.0-beta.27",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-player": "^2.16.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.3",
